--- a/feedsidebar/chrome/skin/ff3/mac/sidebar.css
+++ b/feedsidebar/chrome/skin/ff3/mac/sidebar.css
@@ -4,9 +4,14 @@ statusbar resizer {
 
 #feedbar-preview {
 	padding-top: 5px;
-	background-color: #fff;
+	background-color: #f0f0f0;
 }
 
+#preview-splitter {
+	border-top: 1px solid #919191;
+	background-color: #f0f0f0;
+}
+	
 #feedbarTooltipImage {
 	vertical-align: middle;
 	margin: 0ex 1ex 0ex 1ex;
@@ -30,8 +35,15 @@ treechildren::-moz-tree-image {
 }
 
 #search-toggle {
-	margin-top: 3px;
+	padding-top: 3px;
+	padding-left: 12px;
 	list-style-image: url(chrome://feedbar/skin/icons/search.png);
+}
+
+#search-toggle[checked="true"] {
+	background-color: #ddd;
+	border-right: 1px solid #b9b9b9;
+	border-left: 1px solid #b9b9b9;
 }
 
 #feed_tree, #feedbar_tree_namecol, treechildren::-moz-tree-cell, treechildren::-moz-tree-row {
