Bringing FF2 skin up to speed

--- a/feedsidebar/chrome/skin/ff2/sidebar.css
+++ b/feedsidebar/chrome/skin/ff2/sidebar.css
@@ -34,6 +34,7 @@ treechildren::-moz-tree-image {
 }
 
 #search-toggle {
-	margin-top: 3px;
+	padding-top: 3px;
+	padding-left: 12px;
 	list-style-image: url(chrome://feedbar/skin/icons/search.png);
 }
