--- a/feedsidebar/chrome/skin/ff3/mac/browser.css
+++ b/feedsidebar/chrome/skin/ff3/mac/browser.css
@@ -1,4 +1,4 @@
-#sidebar { max-width: none !important; min-width: none !important; }
+#sidebar { max-width: none !important; }
 
 #feedbar-button {
 	list-style-image: url(chrome://feedbar/skin/icons/icon-states.png);
