--- a/feedsidebar/chrome/skin/ff3/mac/sidebar.css
+++ b/feedsidebar/chrome/skin/ff3/mac/sidebar.css
@@ -63,3 +63,7 @@ statusbarpanel {
 	background-color: #949393;
 	border-top: 1px solid #505050;
 }
+
+#downloads-button dropmarker {
+    display: none;
+}
