--- a/feedsidebar/chrome/skin/ff4/mac/sidebar.css
+++ b/feedsidebar/chrome/skin/ff4/mac/sidebar.css
@@ -67,3 +67,25 @@ statusbarpanel {
 #downloads-button dropmarker {
 	display: none;
 }
+
+#nav-bar toolbarbutton {
+	width: 24px;
+	height: 24px;
+	max-width: 24px;
+	max-height: 24px;
+	margin-top: 6px;
+}
+
+#reload-button image.toolbarbutton-icon {
+	width: 24px;
+	height: 24px;
+	margin-top: -6px;
+	min-width: 24px;
+	max-width: 24px;
+	min-height: 24px;
+	max-height: 24px;
+}
+
+#history-button, #stop-button, #downloads-button {
+	margin-top: -3px;
+}
