Updated icons and styles for Australis.

--- a/feedsidebar/chrome/skin/browser.css
+++ b/feedsidebar/chrome/skin/browser.css
@@ -1,13 +1,41 @@
 #sidebar { max-width: none !important; }
 
 #feedbar-button {
-	list-style-image: url(chrome://feedbar/skin/icons/feed-icon-default.png);
+	list-style-image: url(chrome://feedbar/skin/icons/feed-icon-default-16.png);
 }
 
 #feedbar-button[new="true"] {
-	list-style-image: url(chrome://feedbar/skin/icons/feed-icon-notify.png);
+	list-style-image: url(chrome://feedbar/skin/icons/feed-icon-notify-16.png);
 }
 
 #feedbar-button[checked="true"] {
-	list-style-image: url(chrome://feedbar/skin/icons/feed-icon-active.png);
+	list-style-image: url(chrome://feedbar/skin/icons/feed-icon-active-16.png);
+}
+
+#feedbar-button[cui-areatype="menu-panel"],
+toolbarpaletteitem[place="palette"] > #feedbar-button {
+	list-style-image: url(chrome://feedbar/skin/icons/feed-icon-notify-32.png);
+}
+
+@media (min-resolution: 2dppx) {
+	#feedbar-button {
+		list-style-image: url(chrome://feedbar/skin/icons/feed-icon-default-32.png);
+	}
+	
+	#feedbar-button > .toolbarbutton-icon {
+		width: 18px;
+	}
+	
+	#feedbar-button[new="true"] {
+		list-style-image: url(chrome://feedbar/skin/icons/feed-icon-notify-32.png);
+	}
+	
+	#feedbar-button[checked="true"] {
+		list-style-image: url(chrome://feedbar/skin/icons/feed-icon-active-32.png);
+	}
+	
+	#feedbar-button[cui-areatype="menu-panel"],
+	toolbarpaletteitem[place="palette"] > #feedbar-button {
+		list-style-image: url(chrome://feedbar/skin/icons/feed-icon-notify-64.png);
+	}
 }
