Updated 'Mark as Read' button -- now using a checkmark based on the stop button instead of the scissors.

--- a/feedsidebar/chrome/skin-platform/mac/sidebar-buttons.css
+++ b/feedsidebar/chrome/skin-platform/mac/sidebar-buttons.css
@@ -89,11 +89,13 @@
 	}
 
 	#feedbar-read-all {
-		-moz-image-region: rect(0, 1008px, 36px, 972px);
+		list-style-image: url("chrome://feedbar/skin/icons/mark-as-read@2x.png");
+		-moz-image-region: rect(0, 36px, 36px, 0px ); 
+		
 	}
 	
 	#feedbar-read-all:not([disabled]):hover {
-		-moz-image-region: rect(36px, 1008px, 72px, 972px);
+		-moz-image-region: rect(36px, 36px, 72px, 0px ); 
 	}
 	
 	#feedbar-period-button {
