Non-hi-dpi mark as read button

--- a/feedsidebar/chrome/skin-platform/linux/sidebar-buttons.css
+++ b/feedsidebar/chrome/skin-platform/linux/sidebar-buttons.css
@@ -15,7 +15,8 @@
 }
 
 #feedbar-read-all {
-	-moz-image-region: rect(0, 504px, 18px, 486px);
+	list-style-image: url("chrome://feedbar/skin/icons/mark-as-read.png");
+	-moz-image-region: rect(0, 18px, 18px, 0px );
 }
 
 #feedbar-period-button {
