--- a/feedsidebar/chrome/skin-platform/mac/sidebar-buttons.css
+++ b/feedsidebar/chrome/skin-platform/mac/sidebar-buttons.css
@@ -25,7 +25,7 @@
 
 #feedbar-read-all {
 	list-style-image: url("chrome://feedbar/skin/icons/mark-as-read.png");
-	-moz-image-region: rect(0, 18px, 18px, 0px ); 
+	-moz-image-region: rect(0, 18px, 18px, 0px );
 }
 
 #feedbar-read-all:not([disabled]):hover {
@@ -57,11 +57,12 @@
 }
 
 #feedbar-sort-button {
-	-moz-image-region: rect(0, 198px, 18px, 180px);
+	list-style-image: url("chrome://feedbar/skin/icons/sort.png");
+	-moz-image-region: rect(0, 18px, 18px, 0px );
 }
 
 #feedbar-sort-button:not([disabled]):hover {
-	-moz-image-region: rect(18px, 198px, 36px, 180px);
+	-moz-image-region: rect(18px, 18px, 36px, 0x);
 }
 
 #feedbar-sort-button .toolbarbutton-icon {
@@ -123,11 +124,12 @@
 	}
 	
 	#feedbar-sort-button {
-		-moz-image-region: rect(0, 396px, 36px, 360px);
+		list-style-image: url("chrome://feedbar/skin/icons/sort@2x.png");
+		-moz-image-region: rect(0, 36px, 36px, 0px );
 	}
 	
 	#feedbar-sort-button:not([disabled]):hover {
-		-moz-image-region: rect(36px, 396px, 72px, 360px);
+		-moz-image-region: rect(36px, 36px, 72px, 0px ); 
 	}
 	
 	#search-toggle {
